Archive2/17/0fe36aabdd961f/output
main.cpp: In function 'int main()':
main.cpp:7:22: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     std::vector<int> v{2, 4, 2, 0, 5, 10, 7, 3, 7, 1}; 
                      ^
main.cpp:7:53: error: in C++98 'v' must be initialized by constructor, not by '{...}'
     std::vector<int> v{2, 4, 2, 0, 5, 10, 7, 3, 7, 1}; 
                                                     ^
main.cpp:7:53: error: no matching function for call to 'std::vector<int>::vector(<brace-enclosed initializer list>)'
main.cpp:7:53: note: candidates are:
In file included from /usr/include/c++/4.8/vector:64:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_vector.h:398:9: note: template<class _InputIterator> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&)
         vector(_InputIterator __first, _InputIterator __last,
         ^
/usr/include/c++/4.8/bits/stl_vector.h:398:9: note:   template argument deduction/substitution failed:
main.cpp:7:53: note:   cannot convert '2' (type 'int') to type 'const allocator_type& {aka const std::allocator<int>&}'
     std::vector<int> v{2, 4, 2, 0, 5, 10, 7, 3, 7, 1}; 
                                                     ^
In file included from /usr/include/c++/4.8/vector:64:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_vector.h:310:7: note: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>]
       vector(const vector& __x)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:310:7: note:   candidate expects 1 argument, 10 provided
/usr/include/c++/4.8/bits/stl_vector.h:295:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::value_type = int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(size_type __n, const value_type& __value = value_type(),
       ^
/usr/include/c++/4.8/bits/stl_vector.h:295:7: note:   candidate expects 3 arguments, 10 provided
/usr/include/c++/4.8/bits/stl_vector.h:256:7: note: std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(const allocator_type& __a)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:256:7: note:   candidate expects 1 argument, 10 provided
/usr/include/c++/4.8/bits/stl_vector.h:248:7: note: std::vector<_Tp, _Alloc>::vector() [with _Tp = int; _Alloc = std::allocator<int>]
       vector()
       ^
/usr/include/c++/4.8/bits/stl_vector.h:248:7: note:   candidate expects 0 arguments, 10 provided
main.cpp:10:17: error: range-based 'for' loops are not allowed in C++98 mode
     for (int n: v)
                 ^
main.cpp:15:10: warning: 'auto' changes meaning in C++11; please remove it [-Wc++0x-compat]
     for (auto i = v.begin(); i != v.end(); ++i) {
          ^
main.cpp:15:15: error: 'i' does not name a type
     for (auto i = v.begin(); i != v.end(); ++i) {
               ^
main.cpp:15:30: error: expected ';' before 'i'
     for (auto i = v.begin(); i != v.end(); ++i) {
                              ^
main.cpp:15:30: error: 'i' was not declared in this scope
main.cpp:20:17: error: range-based 'for' loops are not allowed in C++98 mode
     for (int n: v)
                 ^
main.cpp:28:17: error: range-based 'for' loops are not allowed in C++98 mode
     for (int n: v)
                 ^
main.cpp:36:17: error: range-based 'for' loops are not allowed in C++98 mode
     for (int n: v)
                 ^
